<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/addAlarmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?attr/colorSurface"
        android:gravity="center_horizontal"
        tools:context=".view.activities.AddAlarmActivity">


    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_label_hint"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alarmLabelEditText"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:inputType="textCapSentences"
                android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>


    <!--    Chọn nhạc chuông-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/ringtoneNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_ringtone"
            android:padding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectRingtoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_ringtone"
            android:contentDescription="@string/select_ringtone_description" />

    </LinearLayout>


    <!--    Phần chọn ngày lặp lại-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_days"
        android:layout_marginBottom="8dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/daysOfWeekLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <CheckBox
                android:id="@+id/checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:padding="2dp"
                android:contentDescription="@string/sun_description" />

            <CheckBox
                android:id="@+id/checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:padding="2dp"
                android:contentDescription="@string/mon_description" />

            <CheckBox
                android:id="@+id/checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:padding="2dp"
                android:contentDescription="@string/tue_description" />

            <CheckBox
                android:id="@+id/checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:padding="2dp"
                android:contentDescription="@string/wed_description" />

            <CheckBox
                android:id="@+id/checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:padding="2dp"
                android:contentDescription="@string/thu_description" />

            <CheckBox
                android:id="@+id/checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:padding="2dp"
                android:contentDescription="@string/fri_description" />

            <CheckBox
                android:id="@+id/checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:padding="2dp"
                android:contentDescription="@string/sat_description" />

        </LinearLayout>

    </HorizontalScrollView>

    <!--    3 nút xóa hủy lưu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonDeleteAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:enabled="false"
            android:contentDescription="@string/delete_description"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:contentDescription="@string/cancel_description"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/saveAlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:contentDescription="@string/save_description" />

    </LinearLayout>
</LinearLayout>